# interview-task

./: Cargo.toml  Dockerfile  build-image.sh  docker-compose.yml  post_random_comments.sh
dev/nginx/: nginx.conf
src/: comment.rs  envvars.rs  main.rs  mongo.rs  redis.rs
