[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
lazy_static = "1.4"
tokio = "^1"
serde = { version = "1", features = [ "derive" ] }
anyhow = "1"
actix-web = "4.3"
log = "0.4"
env_logger = "0.10"



