[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
mongodb = "3"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
